--- a/wiki/ModelIntervHuman.wiki
+++ b/wiki/ModelIntervHuman.wiki
@@ -64,10 +64,10 @@ When used with a 1-day time-step, the `MDADescription` element must be present w
 == Intermittent Preventive Treatment ==
 
 IPTi and IPTc: Intermittent Preventive Treatment for infants or children. 
-Antimalarial drugs are given at specified ages in infants according to the routine vaccination schedule (IPTi) or at regular intervals in children for whom delivery may be timed to coincide with the malaria season (IPTc). IPTi is specified as a continuous intervention and IPTc can be via either continuous or mass deployment.
+Antimalarial drugs are given at specified ages in infants according to the routine vaccination schedule (IPTi) or at regular intervals in children for whom delivery may be timed to coincide with the malaria season (IPTc). 
 
 IPT is compatible with the 5-day timestep model. The drug action is similar to that of the mass drug administration but can have a longer lasting (prophylactic) effect and can affect individual infections with different levels of drug resistance differently. 
-There is currently no equivalent for 1-day time-step models, since the PKPD model used for mass-drug administration already allows prophylactic effects.
+There is currently no equivalent for 1-day time-step models, since the PKPD model used for mass-drug administration already allows prophylactic effects and the 1-day within-host models allow more sophisticated effects of the drugs on parasite dynamics.
 
 
 IPT must be described per scenario with an `IPTDescription` element. Uses standard [ModelInterventions#Continuous_descriptions continuous] and [ModelInterventions#Timed_descriptions mass-deployment] descriptions with name `ipti`.
@@ -80,15 +80,14 @@ IPT must be described per scenario with an `IPTDescription` element. Uses standa
       <infGenotype ACR="0.5" atten="1" freq="0.1" name="triples" proph="0" tolPeriod="4"/>
     </iptiDescription>
   </descriptions>
-  <continuous>
+   <continuous>
     <ipti coverage="0.95" targetAgeYrs="0.17"/>
     <ipti coverage="0.95" targetAgeYrs="0.25"/>
     <ipti coverage="0.95" targetAgeYrs="0.75"/>
-  </continuous>
-  <timed>
-    <intervention time="7">
-      <ipti coverage="0.95"/>
-    </intervention>
-  </timed>
-</interventions>
+   </continuous>
+  </interventions>
 }}}
+
+In this example, IPTi is given at 2, 3 and 9 months of age with a coverage of 95% for each dose. Infections have one of three specified genotypes ('wt','108','triples') which correspond to different degrees of drug resistance. The drug in this example is sulphadoxine-pyrimethamine. Existing wildtype infections (wt) are cleared with a cure rate (ACR) of 100%, and incoming wildtype infections are cleared for a prophylactic period (proph) of 10*5 days. The intervention can also be timed to simulate seasonal delivery. `iptieffect` refers to whether the IPT or placebo group should be simulated (>=10 are IPT groups) and the choice of treatment drug in those who present with malaria fevers. 
+
+ 
