--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -108,5 +108,5 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 47 || nMassVA || age group || 24 || The number of people newly protected by a vector-availability intervention since the last survey. ||
 || 48 || Clinical_Microscopy  || (unused) || 24 || Number of microscopy tests used ||
 || 49 || Clinical_DrugUsageIV || drug ID || 24 || Quantities of intravenous drugs used, per active ingredient abbreviation ||
-|| 50 || nAddedToCohort || age group || 24.1 || Number of individuals added to cohort ||
-|| 51 || nRemovedFromCohort || age group || 24.1 || Number of individuals added to cohort ||
+|| 50 || nAddedToCohort || age group || n || Number of individuals added to cohort ||
+|| 51 || nRemovedFromCohort || age group || n || Number of individuals added to cohort ||
